package Iterator.Package;

public interface Aggregate {
  public abstract Iterator iterator();
}