package Iterator.Package;

public class Book {
  private String name;
  public Book(String name){
    this.name = name;
  }

  public String getName(){
    return name;
  }
}
