package Iterator.Package;

public interface Iterator {
  public abstract boolean hasNext();
  public abstract Object next();
}
